RESOLVED FIXED266233
compile-webkit fails with ./interpreter/Interpreter.cpp:868:56: error: use of undeclared identifier 'VMEntryDisallowed'
https://bugs.webkit.org/show_bug.cgi?id=266233
Summary compile-webkit fails with ./interpreter/Interpreter.cpp:868:56: error: use of...
Karl Rackler
Reported 2023-12-11 10:08:38 PST
https://build.webkit.org/#/builders/945/builds/2916 https://build.webkit.org/#/builders/945/builds/2916/steps/10/logs/stdio In file included from /Volumes/Data/worker/Apple-Sonoma-LLINT-CLoop-BuildAndTest/build/WebKitBuild/Debug/DerivedSources/JavaScriptCore/unified-sources/UnifiedSource80.cpp:3: ./interpreter/Interpreter.cpp:868:56: error: use of undeclared identifier 'VMEntryDisallowed' CRASH_WITH_EXTRA_SECURITY_IMPLICATION_AND_INFO(VMEntryDisallowed, "VM entry disallowed"_s); ^ 1 error generated.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-11 10:10:31 PST
Mark Lam
Comment 2 2023-12-11 11:08:43 PST
This looks like a simple case of a shift in unified sources. Investigating.
Alexey Proskuryakov
Comment 3 2023-12-11 12:43:46 PST
*** Bug 266240 has been marked as a duplicate of this bug. ***
Mark Lam
Comment 4 2023-12-11 14:28:49 PST
EWS
Comment 5 2023-12-11 14:57:42 PST
Committed 271902@main (e2eaee3149c8): <https://commits.webkit.org/271902@main> Reviewed commits have been landed. Closing PR #21655 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.